[package]
name = "bitcoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.0"
num-bigint = "0.4"
num-traits = "0.2.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ripemd = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.2"
